--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/** @format */
+
 * {
   margin: 0;
   padding: 0;
@@ -17,6 +19,7 @@ h5,
 h6 {
   font-family: "Playfair Display", serif;
   margin-bottom: 1em;
+  color: firebrick;
 }
 
 nav {
